<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smartwatch Administrator</string>
    <string name="action_settings">Settings</string>
    <string name="patient_tracking">Patient Locations</string>
    <string name="title_activity_admin_google_mapping">Patient\'s Location</string>
    <string name="hello_world">Hello world!</string>
    <string name="panic_off">Patient State Normal</string>
    <string name="panic_on">Patient Panic On</string>
    <string name="call_smartwatch">Call SmartWatch</string>
    
    <!-- Mapping Strings -->
    <string name="mapstyle_map">Map</string>
    <string name="mapstyle_satellite">Satellite</string>
    <string name="mapstyle_hybrid">Hybrid</string>
    <string name="mapstyle_select">Map Style…</string>
    <string name="mapstyle_terrain">Terrain</string>
    <string name="geofence_add">Add Fence</string>
    <string name="geofence_modify">Modify Geofence</string>
    <string name="geofence_radius">Radius (metres):</string>
    <string name="geofence_active">Active (1T/0F):</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="action_trackPosition">Active Position Tracking</string>
    
    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>

    <!-- Reminder Strings -->
    <string name="title_activity_calendar_reminder">CalendarReminder</string>
    <string name="title_organiser_email">Organiser\'s E-mail:</string>
    <string name="title_reminder_title">Reminder Title</string>
    <string name="title_reminder_description">Reminder Description</string>
    <string name="title_beginning_date">Beginning Date</string>
    <string name="title_beginning_time">Beginning Time</string>
    <string name="title_frequency">Frequency (specify \'Days\')</string>
    <string name="title_set_reminder">Set Reminder</string>
    <string name="patient_checkin_daily">Daily</string>
    <string name="patient_checkin_weekly">Weekly</string>
    <string name="patient_checkin_hourly">Hourly</string>
    <string name="checkin_send_now">Send Request</string>
    <string name="patient_checkin_title">Patient Check-in</string><string name="patientName">Name:</string><string name="patientAge">Age:</string><string name="patientAddress">Address:</string><string name="medicalInformation">Medical Information:</string><string name="emergencyContact">Emergency Contact:</string>
    <string name="updateButton">Update</string>
    <string name="patient_profiles">Patient Profiles</string>
    <string name="saveButton">Save</string>
    <string name="login">Login</string> 
  	<string name="retrieve_id">Retrieve</string> 
  	<string name="password">Password</string>
  	<string name="carer_id">Carer ID</string>
  	<string name="my_patients">My Patients</string>
  	<string name="viewProfile">View Profile</string>
</resources>
