<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.illusivemen.smartwatchadministrator.MainMenu" >

    <Button
        android:id="@+id/btnTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="showLocations"
        android:text="@string/patient_tracking" />

    <Button
        android:id="@+id/callSmartWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnTrack"
        android:onClick="callSmartWatch"
        android:text="Call SmartWatch" />

    <ToggleButton
        android:id="@+id/tglPanic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="changePanic"
        android:text="@string/panic_off"
        android:textOff="@string/panic_off"
        android:textOn="@string/panic_on" />
	<!-- IM27 -->
    <Button
        android:id="@+id/sendNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/callSmartWatch"
        android:layout_below="@+id/callSmartWatch"
        android:text="Add Reminder"
        android:onClick="setReminder" />

    <Button
        android:id="@+id/patientCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sendNowButton"
        android:layout_below="@+id/sendNowButton"
        android:text="Patient Check-In"
        android:onClick="patientCheckIn" />

    <Button
        android:id="@+id/patientProfiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patientCheckIn"
        android:layout_below="@+id/patientCheckIn"
        android:text="@string/my_patients" 
        android:onClick="selectPatientProfile"/>

    <Button
        android:id="@+id/loginPrompt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patientProfiles"
        android:layout_below="@+id/patientProfiles"
        android:text="@string/login" 
        android:onClick="loginPrompt" />

</RelativeLayout>
