<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.illusivemen.smartwatchadministrator.AdminGoogleMapping" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/activity_admin_google_mapping" />

    <RelativeLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:clickable="true"
        android:onClick="hideModifyFence"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/overlay_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#CCFFFFFF"
            android:clickable="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/geofenceModTitile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/geofence_modify"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/geofenceModId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:orientation="horizontal"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/inputRadius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/geofence_radius" />

                <EditText
                    android:id="@+id/editRadius"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:paddingRight="10dp" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:orientation="horizontal"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/inputActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/geofence_active" />

                <EditText
                    android:id="@+id/editActive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:paddingRight="10dp" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <Button
                    android:id="@+id/deleteFence"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="deleteGeofence"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/saveFence"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="updateGeofence"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/cancelFence"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="hideModifyFence"
                    android:text="@string/cancel" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
